--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </header>
   <main class="content">
     <section class="profile page__section">
-      <div class="profile__image" style='background-image: url <%= require('./images/avatar.jpg') %>'></div>
+      <div class="profile__image" style="background-image: url('<%= require('./images/avatar.jpg') %>')"></div>
       <div class="profile__info">
         <h1 class="profile__title">Жак-Ив Кусто</h1>
         <button class="profile__edit-button" type="button"></button>
@@ -80,7 +80,7 @@
 </template>
 <div class="popup popup_type_image">
   <div class="popup__container">
-    <img class="popup__image" src="#" alt="">
+    <img class="popup__image" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" alt="">
     <p class="popup__caption"></p>
     <button class="popup__close"></button>
   </div>
