--- a/src/index.html
+++ b/src/index.html
@@ -37,75 +37,61 @@
         <p class="footer__copyright">© 2025 Mesto Russia</p>
       </footer>
 
-<div class="popup popup_type_edit popup_animation">
-  <div class="popup__content">
-    <button type="button" class="popup__close"></button>
-    <h3 class="popup__title">Редактировать профиль</h3>
-    <form class="popup__form popup__form_type_edit" name="edit-profile" novalidate>
-<input
-  type="text"
-  name="name"
-  class="popup__input popup__input_type_name"
-  placeholder="Имя"
-  required
-  minlength="2"
-  maxlength="40"
-  pattern="^[А-Яа-яЁёA-Za-z\s\-]+$"
-/>
-<span class="popup__input-error name-error"></span>
-
-<input
-  type="text"
-  name="description"
-  class="popup__input popup__input_type_description"
-  placeholder="Занятие"
-  required
-  minlength="2"
-  maxlength="200"
-  pattern="^[А-Яа-яЁёA-Za-z\s\-]+$"
-/>
-<span class="popup__input-error description-error"></span>
-
-      <button type="submit" class="button popup__button" disabled>Сохранить</button>
-    </form>
-  </div>
-</div>
-
+      <div class="popup popup_type_edit popup_animation">
+        <div class="popup__content">
+          <button type="button" class="popup__close"></button>
+          <h3 class="popup__title">Редактировать профиль</h3>
+          <form
+            class="popup__form popup__form_type_edit"
+            name="edit-profile"
+            novalidate
+          >
+            <input
+              type="text"
+              name="name"
+              class="popup__input popup__input_type_name"
+              placeholder="Имя"
+              required
+            />
+            <input
+              type="text"
+              name="description"
+              class="popup__input popup__input_type_description"
+              placeholder="Занятие"
+              required
+            />
+            <button type="submit" class="button popup__button">
+              Сохранить
+            </button>
+          </form>
+        </div>
+      </div>
 
       <div class="popup popup_type_add popup_animation">
         <div class="popup__content">
           <button type="button" class="popup__close"></button>
           <h3 class="popup__title">Новое место</h3>
-<form class="popup__form popup__form_type_add" name="add-card" novalidate>
-<input
-  type="text"
-  name="name"
-  class="popup__input popup__input_type_name"
-  placeholder="Имя"
-  required
-  minlength="2"
-  maxlength="40"
-  pattern="^[А-Яа-яЁёA-Za-z\s\-]+$"
-  data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
-/>
-<span class="popup__input-error name-error"></span>
-
-<!-- Аналогично для поля Название -->
-<input
-  type="text"
-  name="title"
-  class="popup__input popup__input_type_title"
-  placeholder="Название"
-  required
-  minlength="2"
-  maxlength="30"
-  pattern="^[А-Яа-яЁёA-Za-z\s\-]+$"
-  data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
-/>
-<span class="popup__input-error title-error"></span>
-
-  <button type="submit" class="button popup__button">Создать</button>
-</form>
+          <form
+            class="popup__form popup__form_type_add"
+            name="add-card"
+            novalidate
+          >
+            <input
+              type="text"
+              name="title"
+              class="popup__input popup__input_type_title"
+              placeholder="Название"
+              required
+            />
+            <input
+              type="url"
+              name="link"
+              class="popup__input popup__input_type_link"
+              placeholder="Ссылка на картинку"
+              required
+            />
+            <button type="submit" class="button popup__button">Создать</button>
+          </form>
         </div>
       </div>
 
