--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,30 @@
         </div>
       </div>
 
+<div class="popup popup_type_avatar">
+  <div class="popup__container">
+    <button class="popup__close" type="button"></button>
+    <form class="popup__form popup__form_type_avatar" name="avatar" novalidate>
+      <h2 class="popup__title">Обновить аватар</h2>
+      <input
+        type="url"
+        name="avatar"
+        class="popup__input popup__input_type_avatar"
+        placeholder="Ссылка на аватар"
+        required
+      />
+      <span class="popup__input-error avatar-error"></span>
+      <button type="submit" class="popup__button popup__button_disabled" disabled>Сохранить</button>
+    </form>
+  </div>
+</div>
+<div class="popup popup_type_image">
+  <div class="popup__figure">
+    <button class="popup__close" type="button"></button>
+    <img class="popup__image" src="#" alt="" />
+    <p class="popup__caption"></p>
+  </div>
+</div>
       <div class="popup popup_type_add popup_animation">
         <div class="popup__content">
           <button type="button" class="popup__close"></button>
