--- a/src/index.html
+++ b/src/index.html
@@ -41,33 +41,33 @@
         <div class="popup__content">
           <button type="button" class="popup__close"></button>
           <h3 class="popup__title">Редактировать профиль</h3>
-<form class="popup__form popup__form_type_edit" name="edit-profile" novalidate>
-  <input
-    type="text"
-    name="name"
-    class="popup__input popup__input_type_name"
-    placeholder="Имя"
-    required
-    minlength="2"
-    maxlength="40"
-    pattern="^[a-zA-Zа-яА-ЯёЁ\s-]+$"
-  />
-  <span class="popup__input-error name-error"></span>
+          <form class="popup__form popup__form_type_edit" name="edit-profile" novalidate>
+            <input
+              type="text"
+              name="name"
+              class="popup__input popup__input_type_name"
+              placeholder="Имя"
+              required
+              minlength="2"
+              maxlength="40"
+              pattern="^[a-zA-Zа-яА-ЯёЁ\s-]+$"
+            />
+            <span class="popup__input-error name-error"></span>
 
-  <input
-    type="text"
-    name="about"
-    class="popup__input popup__input_type_description"
-    placeholder="Занятие"
-    required
-    minlength="2"
-    maxlength="200"
-    pattern="^[a-zA-Zа-яА-ЯёЁ\s-]+$"
-  />
-  <span class="popup__input-error about-error"></span>
+            <input
+              type="text"
+              name="description"
+              class="popup__input popup__input_type_description"
+              placeholder="Занятие"
+              required
+              minlength="2"
+              maxlength="200"
+              pattern="^[a-zA-Zа-яА-ЯёЁ\s-]+$"
+            />
+            <span class="popup__input-error description-error"></span>
 
-  <button type="submit" class="button popup__button" disabled>Сохранить</button>
-</form>
+            <button type="submit" class="button popup__button" disabled>Сохранить</button>
+          </form>
         </div>
       </div>
 
