--- a/src/index.html
+++ b/src/index.html
@@ -154,14 +154,10 @@
       </template>
 
       <div class="popup popup_type_image popup_animation">
-        <div class="popup__container">
-          <img
-            class="popup__image"
-            src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-            alt=""
-          />
+        <div class="popup__content-image">
+          <button class="popup__close" type="button"></button>
+          <img class="popup__image" src="#" alt="" />
           <p class="popup__caption"></p>
-          <button class="popup__close"></button>
         </div>
       </div>
     </div>
