--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,11 @@
         <div class="popup__content">
           <button type="button" class="popup__close"></button>
           <h3 class="popup__title">Редактировать профиль</h3>
-          <form class="popup__form popup__form_type_edit" name="edit-profile" novalidate>
+          <form
+            class="popup__form popup__form_type_edit"
+            name="edit-profile"
+            novalidate
+          >
             <input
               type="text"
               name="name"
@@ -66,7 +70,9 @@
             />
             <span class="popup__input-error description-error"></span>
 
-            <button type="submit" class="button popup__button" disabled>Сохранить</button>
+            <button type="submit" class="button popup__button" disabled>
+              Сохранить
+            </button>
           </form>
         </div>
       </div>
@@ -74,7 +80,11 @@
       <div class="popup popup_type_avatar">
         <div class="popup__container">
           <button class="popup__close" type="button"></button>
-          <form class="popup__form popup__form_type_avatar" name="avatar" novalidate>
+          <form
+            class="popup__form popup__form_type_avatar"
+            name="avatar"
+            novalidate
+          >
             <h2 class="popup__title">Обновить аватар</h2>
             <input
               type="url"
@@ -84,17 +94,36 @@
               required
             />
             <span class="popup__input-error avatar-error"></span>
-            <button type="submit" class="popup__button popup__button_disabled" disabled>Сохранить</button>
+            <button
+              type="submit"
+              class="popup__button popup__button_disabled"
+              disabled
+            >
+              Сохранить
+            </button>
           </form>
         </div>
       </div>
 
       <div class="popup popup_type_confirm" id="popupConfirmDelete">
         <div class="popup__container">
-          <button type="button" class="popup__close" aria-label="Закрыть"></button>
+          <button
+            type="button"
+            class="popup__close"
+            aria-label="Закрыть"
+          ></button>
           <h3 class="popup__title">Вы уверены?</h3>
-          <form class="popup__form popup__form_type_confirm" name="confirmDeleteForm" novalidate>
-            <button type="submit" class="popup__button popup__button_type_confirm">Да</button>
+          <form
+            class="popup__form popup__form_type_confirm"
+            name="confirmDeleteForm"
+            novalidate
+          >
+            <button
+              type="submit"
+              class="popup__button popup__button_type_confirm"
+            >
+              Да
+            </button>
           </form>
         </div>
       </div>
@@ -129,7 +158,9 @@
             />
             <span class="popup__input-error link-error"></span>
 
-            <button type="submit" class="button popup__button" disabled>Создать</button>
+            <button type="submit" class="button popup__button" disabled>
+              Создать
+            </button>
           </form>
         </div>
       </div>
