--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
               minlength="2"
               maxlength="40"
               pattern="^[a-zA-Zа-яА-ЯёЁ\s-]+$"
-              data-error-value-missing="Пожалуйста, введите имя"
+              data-error-value-missing="Вы пропустили это поле."
               data-error-too-short="Имя должно содержать не менее 2 символов"
               data-error-pattern-mismatch="Имя содержит недопустимые символы"
             />
@@ -70,7 +70,7 @@
               minlength="2"
               maxlength="200"
               pattern="^[a-zA-Zа-яА-ЯёЁ\s-]+$"
-              data-error-value-missing="Пожалуйста, введите описание"
+              data-error-value-missing="Вы пропустили это поле."
               data-error-too-short="Описание должно содержать не менее 2 символов"
               data-error-pattern-mismatch="Описание содержит недопустимые символы"
             />
@@ -99,7 +99,7 @@
               placeholder="Ссылка на аватар"
               required
               data-error-value-missing="Пожалуйста, введите ссылку на аватар"
-              data-error-type-mismatch="Введите корректный URL"
+              data-error-type-mismatch="Введите адрес сайта."
             />
             <span class="popup__input-error avatar-error"></span>
             <button
@@ -154,7 +154,7 @@
               minlength="2"
               maxlength="30"
               pattern="^[a-zA-Zа-яА-ЯёЁ\s-]+$"
-              data-error-value-missing="Пожалуйста, введите название"
+              data-error-value-missing="Вы пропустили это поле."
               data-error-too-short="Название должно содержать не менее 2 символов"
               data-error-pattern-mismatch="Название содержит недопустимые символы"
             />
@@ -166,8 +166,8 @@
               class="popup__input popup__input_type_link"
               placeholder="Ссылка на картинку"
               required
-              data-error-value-missing="Пожалуйста, введите ссылку на картинку"
-              data-error-type-mismatch="Введите корректный URL"
+              data-error-value-missing="Введите адрес сайта."
+              data-error-type-mismatch="Введите адрес сайта."
             />
             <span class="popup__input-error link-error"></span>
 
