--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
               required
               minlength="2"
               maxlength="40"
-              pattern="^[a-zA-Zа-яА-ЯёЁ\s-]+$"
+              pattern="^[a-zA-Zа-яА-ЯёЁ\- ]+$"
               data-error-value-missing="Вы пропустили это поле."
               data-error-too-short="Имя должно содержать не менее 2 символов"
               data-error-pattern-mismatch="Имя содержит недопустимые символы"
@@ -69,7 +69,7 @@
               required
               minlength="2"
               maxlength="200"
-              pattern="^[a-zA-Zа-яА-ЯёЁ\s-]+$"
+              pattern="^[a-zA-Zа-яА-ЯёЁ\- ]+$"
               data-error-value-missing="Вы пропустили это поле."
               data-error-too-short="Описание должно содержать не менее 2 символов"
               data-error-pattern-mismatch="Описание содержит недопустимые символы"
@@ -153,7 +153,7 @@
               required
               minlength="2"
               maxlength="30"
-              pattern="^[a-zA-Zа-яА-ЯёЁ\s-]+$"
+              pattern="^[a-zA-Zа-яА-ЯёЁ\- ]+$"
               data-error-value-missing="Вы пропустили это поле."
               data-error-too-short="Название должно содержать не менее 2 символов"
               data-error-pattern-mismatch="Название содержит недопустимые символы"
